DNS-179 feat(store): add bulk rates endpoint for store currencies
