# docs/swagger.yaml
@@ -1505,15 +1505,6 @@ definitions:
       message:
         type: string
     type: object
-  JSONResponse-CurrencyRate:
-    properties:
-      code:
-        type: integer
-      data:
-        $ref: '#/definitions/CurrencyRate'
-      message:
-        type: string
-    type: object
   JSONResponse-DashboardStatisticsResponse:
     properties:
       code:
@@ -2066,6 +2057,17 @@ definitions:
       data:
         items:
           $ref: '#/definitions/CabinetItemResponse'
+        type: array
+      message:
+        type: string
+    type: object
+  JSONResponse-array_CurrencyRate:
+    properties:
+      code:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/CurrencyRate'
         type: array
       message:
         type: string
@@ -6988,7 +6990,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get all users
+      description: Get all non-root users (root accounts are excluded from the list)
       parameters:
       - in: query
         name: page
@@ -10758,37 +10760,35 @@ paths:
       summary: Get extended list of store currencies
       tags:
       - Store
-  /v1/external/store/currencies/{id}/rate:
+  /v1/external/store/currencies/rate:
     get:
       consumes:
       - application/json
-      description: Get store currency rate
+      description: Get exchange rates for all currencies enabled on the store (uses
+        store rate source and scale)
       parameters:
-      - description: Currency ID
-        in: path
-        name: id
-        required: true
-        type: string
       - description: Store API key
         in: query
         name: api_key
         type: string
+      produces:
+      - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/JSONResponse-CurrencyRate'
+            $ref: '#/definitions/JSONResponse-array_CurrencyRate'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/APIErrors'
         "401":
           description: Unauthorized
           schema:
             $ref: '#/definitions/APIErrors'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/APIErrors'
       security:
       - XApiKey: []
-      summary: Get store currency rate
+      summary: Get rates for all store currencies
       tags:
       - Store
   /v1/external/transactions/unconfirmed/transfer:
